<resources>
    <string name="app_name">REPay</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="need_help">Need Help?</string>
    <string name="further_assistance">For further assistance contact us at</string>
    <string name="help_number">98XXX XXXXX</string>
    <string name="done">DONE</string>
    <string name="nearby_fuel_station">NAVIGATE TO NEARBY FUEL STATION</string>
    <string name="try_again_later">Please try again later. If money is debited, you\n will get refund within the next 48 hrs.</string>
    <string name="order_id_desc">Order ID-</string>
    <string name="rs_1000">1,000</string>
    <string name="payment_failed">Payment failed</string>
    <string name="voucher_validity">Voucher is valid for 48 hours. If expired,\nthe amount will be refunded to your bank account.</string>
    <string name="show_voucher">Show the voucher code at BPCL fuel station\n across India to refuel</string>
    <string name="validity_date">Valid till </string>
    <string name="voucher_code">Voucher Code:</string>
    <string name="transaction_id">Transaction ID-</string>
    <string name="rs_symbol">₹ </string>
    <string name="my_vouchers">My Vouchers</string>
    <string name="transaction_nhistory">Transaction\nHistory</string>
    <string name="add_voucher">ADD VOUCHER</string>
    <string name="select_or_enter_amount">Select or enter amount</string>
    <string name="enter_amount">Enter amount between ₹50 and ₹5,000</string>
    <string name="add_rs_100">+ 100</string>
    <string name="add_rs_500">+ 500</string>
    <string name="add_rs_1000">+ 1000</string>
    <string name="add_rs_2000">+ 2000</string>
    <string name="rs100">100</string>
    <string name="rs500">500</string>
    <string name="rs1000">1000</string>
    <string name="rs2000">2000</string>
    <string name="pay_now">PAY NOW</string>
    <string name="order_id_num">10987654321</string>
    <string name="payment_successful">Payment successful</string>
    <string name="proceed">PROCEED</string>
    <string name="enter_upi_pin">Enter 6 Digit UPI PIN</string>
    <string name="success">Success</string>
    <string name="user_holding_a_phone">user holding a phone</string>
    <string name="registered_mobile_no">Registered Mobile no.</string>
    <string name="mobile_numb">9836524424</string>
    <string name="upi_desc">UPI</string>
    <string name="bank_account_desc">Bank Account</string>
    <string name="bank_account_num">XXXXXXX3658</string>
    <string name="upi_num">XXXXXXXXXX@apl</string>
    <string name="edit_button">edit button</string>
    <string name="right_arrow">right arrow</string>
    <string name="settings_desc">Modify bank account, view profile\ninformation</string>
    <string name="settings_name">Account Settings</string>
    <string name="transaction_id_head">Transaction ID:</string>
    <string name="re_pay">RE-PAY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="re_pay_toolbar_text">RE-Pay</string>
    <string name="link_your_phone">Link your UPI account with RE-Pay for seamless refueling experience. Enter your mobile no. and tap on \'Generate OTP\' to receive one time password (OTP) on your mobile.</string>
    <string name="link_your_upi_account">Link your UPI account</string>
    <string name="country_code">+91</string>
    <string name="description_enter_otp">Enter the one time password (OTP) sent to your mobile.</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="generate_otp">GENERATE OTP</string>
    <string name="verify">verify</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="ok">OK</string>
    <string name="myvoucher_desc">Voucher is valid for 48 hours. If expired,\namount will be refunded to your bank account</string>
    <string name="navigate_to_nearby_fuel_station">navigate to nearby fuel station</string>
    <string name="title_activity_navigation_route">NavigationRoute</string>
    <string name="select_bank">Select Bank</string>
    <string name="select_account">Select Account</string>
    <string name="transaction_history">Transaction History</string>
    <string name="new_voucher">New Voucher</string>
    <string name="settings">Settings</string>
    <string name="please_wait">Please Wait</string>
    <string name="stop">Stop Timer</string>
    <string name="start">Start Timer</string>
    <string name="working">Started</string>
    <string name="stopped">Stopped</string>
</resources>