<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EnterAmountFragment"
    android:background="@color/black">


    <TextView
        android:id="@+id/tv_select_enter_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_or_enter_amount"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/intersemibold"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/get_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_select_enter_amount">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/interregular"
            android:text="@string/rs_symbol"
            android:textColor="@color/desc"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextField_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/montserratregular"
            android:inputType="number"
            android:lines="1"
            android:maxLength="4"
            android:layout_gravity="center"
            android:background="@null"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/get_amount"
        android:text="@string/enter_amount"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/get_amount"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/amount_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv2"
        app:layout_constraintVertical_bias="0.110000014">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/amt_100"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle2"
            android:text="@string/add_rs_100"
            android:textColor="@color/white"
            android:fontFamily="@font/interregular"
            android:gravity="center"
            android:layout_marginStart="20dp"
            app:layout_constraintHorizontal_bias="0.089"
            app:layout_constraintStart_toStartOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/amt_500"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle2"
            android:text="@string/add_rs_500"
            android:textColor="@color/white"
            android:fontFamily="@font/interregular"
            android:gravity="center"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/amt_100"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/amt_1000"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle2"
            android:text="@string/add_rs_1000"
            android:textColor="@color/white"
            android:fontFamily="@font/interregular"
            android:gravity="center"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@id/amt_500"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/amt_2000"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle2"
            android:text="@string/add_rs_2000"
            android:textColor="@color/white"
            android:fontFamily="@font/interregular"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toEndOf="@id/amt_1000"
            app:layout_constraintTop_toBottomOf="@+id/tv2" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/proceedBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/red_button"
        android:fontFamily="@font/intersemibold"
        android:gravity="center"
        android:text="@string/pay_now"
        android:textColor="@color/white"
        android:textSize="13sp"
        app:cornerRadius="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>