<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    tools:context=".PaymentSuccessfulFragment">


    <ImageView
        android:id="@+id/success_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/success"
        android:layout_marginTop="@dimen/_15sdp"/>

    <TextView
        android:id="@+id/tv_success_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/success_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/payment_successful"
        android:fontFamily="@font/montserratbold"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_12sdp"/>

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/rs_linear_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/tv_success_msg"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/tv_rs_symbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_msg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/rs_symbol"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/interbold"
        android:layout_marginTop="@dimen/_8sdp"
        />
    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_msg"
        app:layout_constraintStart_toEndOf="@+id/tv_rs_symbol"
        tools:text="@string/rs_1000"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserratbold"
        android:layout_marginTop="@dimen/_8sdp"
        />
</androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/transaction_id_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rs_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/transaction_id_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rs_linear_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/transaction_id"
            android:fontFamily="@font/montserratregular"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"/>

        <TextView
            android:id="@+id/transaction_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rs_linear_layout"
            tools:text="10987654321"
            android:fontFamily="@font/montserratregular"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/_12sdp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/voucher_linear_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/transaction_id_linear_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/voucher_code_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/transaction_id_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/voucher_code"
        android:fontFamily="@font/montserratregular"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_8sdp"/>
    <TextView
        android:id="@+id/voucher_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/transaction_id_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="126897"
        android:fontFamily="@font/montserratregular"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_8sdp"/>

</androidx.appcompat.widget.LinearLayoutCompat>

<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/validity_linear_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@+id/voucher_linear_layout"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <TextView
        android:id="@+id/validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/voucher_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/validity_date"
        android:fontFamily="@font/montserratregular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/desc"
        android:layout_marginTop="@dimen/_8sdp"/>
    <TextView
        android:id="@+id/validity_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/voucher_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="30 Mar 2023"
        android:fontFamily="@font/montserratregular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/desc"
        android:layout_marginTop="@dimen/_8sdp"/>
</androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/show_voucher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/validity_linear_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/show_voucher"
        android:fontFamily="@font/montserratregular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/desc"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/expire_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/show_voucher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/voucher_validity"
        android:fontFamily="@font/montserratregular"
        android:textSize="@dimen/_10ssp"
        android:textColor="@color/desc"
        android:layout_marginTop="@dimen/_8sdp"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/doneBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expire_msg"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/red_button"
        android:fontFamily="@font/montserratbold"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/navigateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doneBtn"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/rectangle"
        android:fontFamily="@font/montserratbold"
        android:gravity="center"
        android:text="@string/nearby_fuel_station"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"/>



</androidx.constraintlayout.widget.ConstraintLayout>